# pa2

./: Bool.cpp  Bool.h  CMakeCache.txt  CMakeLists.txt  Cell.cpp  Cell.h  Column.cpp  Column.h  Command.cpp  Command.h  Delete.cpp  Delete.h  Expression.cpp  Expression.h  Insert.cpp  Insert.h  Makefile  Model.cpp  Model.h  Number.cpp  Number.h  Operator.cpp  Operator.h  README.md  Reference.cpp  Reference.h  Text.cpp  Text.h  View.cpp  View.h  cmake_install.cmake  editor  editor.cbp  main.cpp
Controller/: Command.cpp  Command.h
Model/: Bool.cpp  Bool.h  Cell.cpp  Cell.h  Expression.cpp  Expression.h  Model.cpp  Number.cpp  Number.h  Operator.cpp  Operator.h  Reference.cpp  Reference.h  Text.cpp  Text.h
View/: View.cpp  View.h
src/: Bool.h  Cell.h  Command.cpp  Command.h  Expression.cpp  Expression.h  Model.cpp  Model.h  Number.cpp  Number.h  Operator.cpp  Operator.h  Reference.cpp  Reference.h  Text.cpp  Text.h  View.cpp  View.h  main.cpp
